@@ -6,6 +6,12 @@ This document contains a list of changes for each release of Krang.
 
 =over
 
+=item * 
+
+Added security feature of locking out users after several failed login
+attempts. Configurable by the BadLoginCount and BadLoginWait conf
+directives. [Michael Peters]
+
 =item *
 
 Fixed bug in Krang::AddOn which would cause multiple version upgrades
